# AutoRia-Clone

./: .env.example  .gitignore  Dockerfile  README.md  autoRiaCloneEnglishVersion.txt  autoria-clone.postman_collection.json  docker-compose.yml  pyproject.toml
apps/car_brand/: models.py  serializer.py  views.py
apps/car_brand_model/: apps.py
apps/car_model/: apps.py  models.py  serializer.py  urls.py
apps/listings/: models.py  permissions.py  serializer.py  urls.py  views.py
apps/premium_account/: models.py
apps/sellers/: models.py  serializers.py  urls.py  views.py
apps/user/: managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/view_listing/: apps.py  models.py  serializers.py  urls.py  views.py
backend/configs/: asgi.py  celery.py  routing.py  settings.py  urls.py
backend/core/: paginations.py
backend/templates/: auto_salon_listing_deleted.html  auto_salon_listing_publication.html  blocked_auto_salon_listing.html  blocket_listing.html  create_admin.html  create_auto_salon.html  create_premium_account.html  delete_auto_salon.html  delete_email.html  delete_invitation.html  deleted_role.html  join_request_approved_email.html  join_request_email.html  listing_deleted.html  listing_publication.html  recovery.html  register.html  seller_create.html  seller_deleted.html  user_blocked.html  user_unblocked.html  welcome.html
client/: asset-manifest.json  index.html
configs/: settings.py  urls.py
configs/extra_conf/: jwt_conf.py
frontend/: package-lock.json  package.json
sellers/: models.py  serializers.py  views.py
(+277 files in other folders)
